# MCC_VoxCad

./: .gitignore  CMakeLists.txt  Dlg_3DBrush.cpp  Dlg_3DBrush.h  Dlg_EditPrim.cpp  Dlg_Physics.cpp  Dlg_Physics.h  Dlg_VideoCapture.cpp  Dlg_Workspace.h  QVX_Edit.cpp  QVX_Interface.cpp  QVX_Interfaces.h  QVX_TensileTest.cpp  QVX_TensileTest.h  README.md  VoxCad.cpp  VoxCad.h  main.cpp  vPhysics.ui
QTUtils/: QOpenGL.cpp  QOpenGL.h
